<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2015 The CyanogenMod Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_filemanager"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start|center"
        android:layout_margin="24dp">

        <TextView
            android:id="@+id/welcome_textview_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/welcome_textview_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file"
            android:fontFamily="sans-serif-light"
            android:textSize="56sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/welcome_textview_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            android:layout_marginTop="-12dp"
            android:fontFamily="sans-serif-light"
            android:textSize="56sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/welcome_textview_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_desc"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>


</FrameLayout>