<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2015 The CyanogenMod Project

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:id="@+id/itemFour"
        android:layout_alignParentBottom="true">


        <LinearLayout
            android:id="@+id/cloud_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="24dp">

            <TextView
                android:text="@string/add_cloud_storage"
                android:id="@+id/cardHeaderText"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="@string/cloud_desc"
                android:id="@+id/cardChildText"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:text="@string/connect_button"
            android:id="@+id/connect_button"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/cloud_text"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
            android:background="@drawable/oobe_connect_button"/>

    </RelativeLayout>


</RelativeLayout>