...
        android:id="@+id/text_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/try_it"
            android:id="@+id/titleMessageOne"
            android:textSize="12sp"
            android:maxWidth="360dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
...
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_desc"
            android:id="@+id/bottomMessageOne"
            android:layout_marginTop="20dp"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>
...
